# oracy

./: .gitignore  Oracy-AI-Planning-Documentation.html  README.md  TODO.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
client/: Dockerfile.dev  README.md  index.html  package.json  tailwind.config.ts
client/src/: App.tsx  index.css
client/src/components/: AppLayout.tsx  AuthGuard.tsx  ModeBadge.tsx  OracyLogo.tsx  ProgressRing.tsx  StrandBadge.tsx  VideoUploader.tsx
client/src/data/: sampleDemoResult.ts
client/src/hooks/: useAudioRecorder.ts
client/src/lib/api/: assessments.ts  auth.ts  client.ts  index.ts  reports.ts  students.ts
client/src/pages/: CreateAssessmentPage.tsx  FeedbackPage.tsx  LandingPage.tsx  LiveDemoPage.tsx  LoginPage.tsx  ProgressPage.tsx  PupilDashboard.tsx  StudentManagementPage.tsx  StudentRegisterPage.tsx  TaskRecordingPage.tsx  TeacherDashboard.tsx  TeacherRegisterPage.tsx  TeacherReviewPage.tsx
client/src/test/: VideoUploader.test.tsx
execution/: 01-setup-and-installation.md  02-environment-configuration.md  03-running-locally.md  04-database-migrations.md  05-ai-pipeline-execution.md  06-testing-procedures.md  07-deployment-execution.md  08-troubleshooting.md  index.md
planning/: 01-architecture-overview-v2.md  01-architecture-overview.md  02-tech-stack.md  03-aws-infrastructure-v2.md  03-aws-infrastructure.md  04-ai-ml-pipeline-v2.md  04-ai-ml-pipeline.md  05-backend-structure.md  06-frontend-structure.md  07-database-schema.md  08-security-compliance.md  09-development-roadmap-v2.md  09-development-roadmap.md  10-deployment-strategy.md  index.md
project-docs/: input→output AI spec.docx
scripts/: combine_markdown.py  html_to_pdf.js  md-to-pdf.js  md_to_pdf.py
server/: Dockerfile.dev  celery_app.py  pyproject.toml  reset_db.py  test_register.py
server/apps/analysis/: models.py  tasks.py  urls.py
server/apps/analysis/migrations/: 0001_initial.py  0002_initial.py
server/apps/analysis/services/: __init__.py  evidence_generator.py  feature_extraction.py  llm_scoring.py  stt_service.py
server/apps/assessments/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
server/apps/assessments/migrations/: 0001_initial.py  0002_initial.py
server/apps/audit/: middleware.py  models.py
server/apps/audit/migrations/: 0001_initial.py  0002_initial.py
server/apps/benchmarks/: apps.py  models.py  urls.py
server/apps/benchmarks/fixtures/: benchmark_definitions.json
server/apps/benchmarks/migrations/: 0001_initial.py  0002_initial.py  0003_load_benchmark_definitions.py
server/apps/core/: authentication.py  exceptions.py  models.py  pagination.py  permissions.py  storage.py
server/apps/reports/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
server/apps/reports/migrations/: 0001_initial.py  0002_initial.py
server/apps/reports/services/: __init__.py  pdf_export.py
server/apps/students/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
server/apps/students/migrations/: 0001_initial.py  0002_initial.py
server/apps/users/: managers.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
server/apps/users/migrations/: 0001_initial.py
server/config/: asgi.py  urls.py  wsgi.py
server/config/settings/: __init__.py  base.py  development.py  production.py  test.py
